--- a/styles2.css
+++ b/styles2.css
@@ -34,7 +34,7 @@ body {
 }
 
 .parallax {
-    background-image: url('landing-image.jpg'); /* Replace with your image */
+    background-image: url('https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Replace with your image */
     height: 400px; /* Adjust height as needed */
     background-attachment: fixed;
     background-position: center;
