--- a/styles2.css
+++ b/styles2.css
@@ -4,33 +4,26 @@ body {
 }
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
     background-color: #333;
-    padding: 15px;
 }
 
-.navbar img.logo {
-    height: 50px;
+.navbar-buttons li{
+    float: left;
 }
 
-.nav-buttons {
-    display: flex;
-}
-
-.nav-buttons button {
-    background-color: transparent;
+.navbar-buttons li a{
+    display: block;
     color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    margin: 0; /* No margin between buttons */
+    text-align: center;
+    padding: 15px 15px;
+    text-decoration: none;
 }
 
-.nav-buttons button:hover {
-    background-color: white; /* Inverted highlight */
-    color: #333; /* Change text color on hover */
+.navbar-buttons li a:hover{
+    background-color: pink;
 }
 
 .parallax {
