--- a/styles2.css
+++ b/styles2.css
@@ -6,10 +6,10 @@ body {
 .navbar {
     overflow: hidden;
     background-color: #333;
+    position: sticky;
+    top: 0;
 }
-
-
-
+ 
 .navbar a{
     float: left;
     color: #f3f3f3;
@@ -17,10 +17,12 @@ body {
     padding: 15px 15px;
     text-decoration: none;
     font-size: 15px;
+    border-right: 1px solid white;
 }
 
 .navbar a:hover{
     background-color: white;
+    color: #333;
 }
 
 .navbar a.active{
@@ -30,7 +32,7 @@ body {
 
 .parallax {
     background-image: url(https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1); /* Replace with your image */
-    height: 400px; /* Adjust height as needed */
+    height: 100%; /* Adjust height as needed */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
