--- a/styles2.css
+++ b/styles2.css
@@ -31,8 +31,8 @@ body {
 }
 
 .parallax {
-    background-image: url('https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Replace with your image */
-    height: 100%; /* Adjust height as needed */
+    background-image: url("https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); /* Replace with your image */
+    min-height: 500px; /* Adjust height as needed */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
