--- a/styles2.css
+++ b/styles2.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -44,8 +48,7 @@ body {
     text-align: center;
 }
 
-.zig-zag {
-    display: flex;
+.zig-zag{
     padding: 64px;
 }
 
@@ -60,13 +63,19 @@ body {
 .zigzag-item.left {
     float: left;
     width: 66.6666%;
-    padding-right: 20px;
+    padding: 20px;
 }
 
 .zigzag-item.right {
     float: left;
     width: 33.3333%;
-    padding-right: 20px;
+    padding: 20px;
+}
+
+img{
+    display: block;
+    height: auto;
+    max-width: 100%;
 }
 
 .cta img {
