--- a/styles2.css
+++ b/styles2.css
@@ -9,16 +9,37 @@
 body {
     font-family: ZukaDoodle;
     margin: 0;
-    size: 20px;
+    size: 30px;
 }
+
+#header{
+    position: absolute;
+    z-index: 1000;
+    top: 200px;
+    left: 100px;
+    width: 800px;
+    font-size: 100px;
+    font-weight: normal;
+  }
+#header2{
+    position: absolute;
+    z-index: 1000;
+    top: 400px;
+    left: 100px;
+    width: 400px;
+    font-size: 20px;
+  }
 
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: black;
     position: sticky;
     top: 0;
 }
  
+.navbar img{
+    padding: 0px
+}
 .navbar a{
     float: left;
     color: #f3f3f3;
@@ -31,7 +52,7 @@ body {
 
 .navbar a:hover{
     background-color: white;
-    color: #333;
+    color: black;
 }
 
 .navbar a.active{
@@ -41,25 +62,37 @@ body {
 
 .parallax {
     background-image: url("Johnny.png");
-    min-height: 100%;
+    min-height: 900px;
+    background-attachment: fixed;
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: 50%;
+}
+
+.parallax2 {
+    background-image: url("https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    min-height: 900px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.parallax2 {
-    background-image: url("https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-    min-height: 100%;
+.parallax3 {
+    background-image: url("https://images.pexels.com/photos/2088170/pexels-photo-2088170.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+    min-height: 900px;
     background-attachment: fixed;
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .about-us, .cta {
-    padding: 20px;
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-bottom: 100px;
     text-align: center;
+    flex-direction: column;
 }
 
 .zig-zag{
@@ -90,6 +123,7 @@ img{
     display: block;
     height: auto;
     max-width: 100%;
+    padding: 30px;
 }
 
 .cta img {
@@ -101,4 +135,47 @@ footer {
     padding: 10px;
     background-color: #333;
     color: white;
+}
+p1{
+    font-size: 25px;
+}
+
+h2{
+    font-size: 50px;
+    font-weight: normal;
+}
+h3{
+    
+    font-size: 45px;
+    font-weight: normal;
+    position: relative;
+    text-align: center;
+}
+
+button{
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 15px 13px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: ZukaDoodle;
+    font-size: 40px;
+    border-radius: 8px;
+    align-self: center;
+}
+
+section1{
+    display: flex;
+    padding-left: 45%;
+    padding-bottom: 40px;
+}
+img1{
+    padding: 30px;
+}
+
+logo1{
+    height: 10%;
+    width: 10%;
 }
